JumpScript/tests/baselines/reference/staticsInAFunction.errors.txt
tests/cases/compiler/staticsInAFunction.jump(1,13): error TS1005: '(' expected.
tests/cases/compiler/staticsInAFunction.jump(2,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.jump(2,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.jump(3,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.jump(3,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.jump(3,16): error TS2304: Cannot find name 'name'.
tests/cases/compiler/staticsInAFunction.jump(3,20): error TS1005: ',' expected.
tests/cases/compiler/staticsInAFunction.jump(3,21): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/compiler/staticsInAFunction.jump(4,4): error TS1128: Declaration or statement expected.
tests/cases/compiler/staticsInAFunction.jump(4,11): error TS2304: Cannot find name 'test'.
tests/cases/compiler/staticsInAFunction.jump(4,16): error TS2304: Cannot find name 'name'.
tests/cases/compiler/staticsInAFunction.jump(4,21): error TS1109: Expression expected.
tests/cases/compiler/staticsInAFunction.jump(4,22): error TS2693: 'any' only refers to a type, but is being used as a value here.
tests/cases/compiler/staticsInAFunction.jump(4,26): error TS1005: ';' expected.


==== tests/cases/compiler/staticsInAFunction.jump (14 errors) ====
    function boo{
                ~
!!! error TS1005: '(' expected.
       static test()
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
       static test(name:string)
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
                   ~~~~
!!! error TS2304: Cannot find name 'name'.
                       ~
!!! error TS1005: ',' expected.
                        ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
       static test(name?:any){}
       ~~~~~~
!!! error TS1128: Declaration or statement expected.
              ~~~~
!!! error TS2304: Cannot find name 'test'.
                   ~~~~
!!! error TS2304: Cannot find name 'name'.
                        ~
!!! error TS1109: Expression expected.
                         ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
                             ~
!!! error TS1005: ';' expected.
    }
    